# edda-bootstrap

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  install.ps1  install.sh
comparisons/job-queue/cpp/: .gitignore  CMakeLists.txt  README.md
comparisons/job-queue/cpp/src/: admin.cpp  cascade.cpp  clock.cpp  jobqueue.cpp  storage.cpp
comparisons/job-queue/cpp/tests/: helpers.hpp  test_audit.cpp  test_basics.cpp  test_cancellation.cpp  test_capacity.cpp  test_concurrency.cpp  test_crosscut.cpp  test_dependencies.cpp  test_interaction.cpp  test_lease.cpp  test_metrics.cpp  test_namespaces.cpp  test_persistence.cpp  test_priority.cpp  test_promotion.cpp  test_retry.cpp  test_scheduled.cpp  test_time.cpp  test_workers.cpp
comparisons/job-queue/rust/: Cargo.toml  README.md
comparisons/job-queue/rust/src/: audit.rs  clock.rs  config.rs  enqueue.rs  error.rs  lib.rs  metrics.rs  priority.rs  queue.rs  state.rs  workers.rs
comparisons/job-queue/rust/tests/: scenarios.rs
crates/edda-cache/: Cargo.toml
crates/edda-cache/src/: error.rs  gc.rs  global.rs  hash.rs  header.rs  lib.rs  manifest.rs  name.rs  paths.rs  tier.rs
crates/edda-cache/src/store/: mod.rs  staging.rs
crates/edda-cache/src/toon/: lex.rs  mod.rs  parse.rs  value.rs  write.rs
crates/edda-cli/: Cargo.toml  build.rs
crates/edda-cli/src/: cli.rs  common_flags.rs  dispatch.rs  driver.rs  exit.rs  flags.rs  hot.rs  lib.rs  main.rs  version.rs
crates/edda-cli/src/parse/: artifacts.rs  build_pipeline.rs  common.rs  hot.rs  mimir.rs  mod.rs  run.rs
crates/edda-codegen/: Cargo.toml
crates/edda-codegen/src/: argument.rs  canonical.rs  cascade.rs  emit.rs  encode.rs  error.rs  graph.rs  hash.rs  lib.rs  manifest.rs
crates/edda-codegen/src/body/: literals.rs  mod.rs  resolver.rs  spec.rs  tags.rs  test_support.rs
crates/edda-codegen/src/instantiate/: format.rs  head_collect.rs  mod.rs  tests.rs
crates/edda-codegen/src/mangle/: args.rs  mod.rs  tests.rs
crates/edda-codegen/src/substitution/: mod.rs  tests.rs  walk_items.rs
crates/edda-compile/: Cargo.toml  build.rs
crates/edda-compile/src/: abi_attr.rs  calling_conv.rs  code_model.rs  error.rs  lib.rs  mir_prim.rs  object_format.rs  ops.rs  reloc_model.rs  simd.rs  target_info.rs
crates/edda-compile/src/emit/: lower_api.rs  mod.rs  object.rs  target_machine.rs  tests.rs
crates/edda-compile/src/lower/: fn_sig.rs  local.rs  mod.rs  operand.rs  program.rs  test_fixtures.rs  ty.rs
crates/edda-comptime/: Cargo.toml
crates/edda-comptime/src/: builtin.rs  error.rs  fndecl.rs  layout.rs  lib.rs
crates/edda-comptime/src/eval/: env.rs  hir_tests.rs  mod.rs  op_tests.rs  tests.rs
crates/edda-comptime/src/value/: float.rs  int.rs  mod.rs
crates/edda-daemon/: Cargo.toml
crates/edda-daemon/src/: daemon.rs  document.rs  error.rs  lib.rs  query.rs  reporter.rs  state.rs
crates/edda-driver/: Cargo.toml
crates/edda-driver/src/: command.rs  context.rs  derive_debug.rs  derive_eq.rs  discover.rs  error.rs  lib.rs  outcome.rs  plan.rs  render.rs  reporter.rs  stdlib_source.rs  structmap.rs  summary.rs  workspace.rs  workspace_exec.rs
crates/edda-link/: Cargo.toml
crates/edda-link/src/: archiver.rs  error.rs  import.rs  invoke.rs  lib.rs  linker.rs  output.rs  resolve.rs  tool.rs
crates/edda-lsp/: Cargo.toml
crates/edda-lsp/src/: capabilities.rs  completion.rs  diagnostics.rs  error.rs  lib.rs  position.rs  semtokens.rs  server.rs  state.rs  uri.rs
crates/edda-manifest/: Cargo.toml
crates/edda-manifest/src/: compiler_pin.rs  lib.rs  lockfile.rs  schema.rs
crates/edda-mcp/: Cargo.toml
crates/edda-mcp/src/: diagnostic.rs  dispatch.rs  error.rs  handshake.rs  lib.rs  methods.rs  params.rs  result.rs  server.rs  session.rs  transport.rs  wire.rs
crates/edda-mimir-archive/: Cargo.toml
crates/edda-mimir-archive/src/: error.rs  hash_toon.rs  lib.rs  pack.rs  unpack.rs
crates/edda-mimir-canonical/: Cargo.toml
crates/edda-mimir-canonical/src/: lib.rs
crates/edda-mimir-crypto/: Cargo.toml
crates/edda-mimir-crypto/src/: lib.rs
crates/edda-mimir-hash/: Cargo.toml
crates/edda-mimir-hash/src/: effect.rs  lib.rs  rune.rs  surface.rs
crates/edda-mimir-hash/tests/: mimir_capability_escalation.rs  mimir_hash_reproducibility.rs  mimir_lockfile_roundtrip.rs  mimir_signature_failures.rs  mimir_surface_hash_tamper.rs
crates/edda-mimir-registry/: Cargo.toml
crates/edda-mimir-registry/src/: cap.rs  error.rs  fetch.rs  index.rs  lib.rs  source.rs
crates/edda-mir/: Cargo.toml
crates/edda-mir/src/: adt.rs  arena.rs  block.rs  body.rs  constant.rs  effect.rs  entry.rs  ids.rs  layout.rs  lib.rs  operand.rs  place.rs  program.rs  rvalue.rs  statement.rs  terminator.rs  ty.rs
crates/edda-mir/tests/: attr_threading.rs
crates/edda-refine/: Cargo.toml
crates/edda-refine/src/: annotation.rs  certificate.rs  certificate_mint.rs  lib.rs  obligation.rs  outcome.rs  schema.rs  solver.rs  sort.rs  wire.rs  z3_backend.rs
crates/edda-refine/tests/: certificate.rs  z3_annotation_routing.rs  z3_certificate.rs  z3_lia_bool.rs  z3_records_sums.rs
crates/edda-resolve/: Cargo.toml
crates/edda-resolve/src/: binding.rs  derive_specs.rs  imports.rs  items.rs  layout.rs  lib.rs  loader.rs  module.rs  package.rs  path.rs  resolutions.rs
crates/edda-rt/: Cargo.toml
crates/edda-rt/src/: abi.rs  alloc.rs  bits.rs  byteorder.rs  crypto.rs  encoding.rs  fs.rs  io.rs  lib.rs  math.rs  process.rs  random.rs  raw.rs  string.rs  subprocess.rs  task.rs  time.rs
crates/edda-structmap/: Cargo.toml
crates/edda-structmap/src/: analyze.rs  budget.rs  cluster.rs  density.rs  emit.rs  lib.rs  model.rs  token.rs
crates/edda-syntax/: Cargo.toml
crates/edda-syntax/src/: lib.rs  token.rs
crates/edda-types/: Cargo.toml
crates/edda-types/src/: attr_tests.rs  capability.rs  coherence.rs  comptime_builtin.rs  cx.rs  cx_tests.rs  effect.rs  graded.rs  implicit_spec.rs  intrinsic.rs  lib.rs  prim.rs  return_mode.rs  sig.rs  stability.rs  test_support.rs  ty.rs  ty_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs
(+532 files in other folders)
