[package]
name = "edda-daemon"
description = "Long-lived compiler-as-service process with persistent structural index."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edda-span.workspace = true
edda-diag.workspace = true
edda-driver.workspace = true
edda-syntax.workspace = true
edda-cache.workspace = true
parking_lot = "0.12"
