[package]
name = "edda-lsp"
description = "Language Server Protocol surface over the edda-daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edda-span.workspace = true
edda-diag.workspace = true
edda-daemon.workspace = true
edda-driver.workspace = true
edda-syntax.workspace = true
edda-intern.workspace = true
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
