[package]
name = "edda-manifest"
description = "package.toml and package.lock.toml parsing and validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edda-span.workspace = true
edda-diag.workspace = true
edda-target.workspace = true
edda-cache.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
