[package]
name = "edda-mimir-registry"
description = "Mímir registry HTTP client — fetch .rune archives and sparse-index entries (HTTPS + file://)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3"
