[package]
name = "edda-mir"
description = "Linear MIR and the typed-HIR -> MIR lowering pass."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ahash = "0.8"
edda-span.workspace = true
edda-intern.workspace = true
edda-diag.workspace = true
edda-types.workspace = true
edda-syntax.workspace = true
edda-resolve.workspace = true
edda-comptime.workspace = true
edda-target.workspace = true
