[package]
name = "edda-syntax"
description = "Lexer, parser, AST, and pretty-printer for the Edda surface syntax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edda-span.workspace = true
edda-intern.workspace = true
edda-diag.workspace = true
