[package]
name = "leased-job-queue"
version = "0.1.0"
edition = "2021"
description = "Persistent leased job queue — Rust implementation for the three-way language comparison."
publish = false

# Detach from the parent edda workspace; this crate is intentionally standalone
# so the comparison is judged on its own terms.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
